users/4/error.txt
file.c: In function 'main':
file.c:5:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
file.c:19:1: error: expected '{' at end of input
 }
 ^
